[package]
name = "jammdb"
description = "An embedded single-file database for Rust"
version = "0.10.0"
authors = ["PJ Tatlow <pjtatlow@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pjtatlow/jammdb"
readme = "README.md"
keywords = ["db", "database", "embedded-database", "memory-map"]
categories = ["database", "database-implementations"]

exclude = [
    ".*.yml",
    ".github/*",
    "ci/*",
    "tests/*",
    "makefile",
]

[dependencies]
libc = "0.2"
memmap2 = "0.7"
page_size = "0.5"
fs2 = "0.4"
sha3 = "0.10"
bytes = "1"
bumpalo = "3.12.0"

[dev-dependencies]
bytes = { version = "1", features = ["serde"] }
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[badges]
codecov = { repository = "pjtatlow/jammdb" }
appveyor = { repository = "pjtatlow/jammdb" }
maintenance = { status = "actively-developed" }
