[package]
name = "jammdb"
description = "An embedded single-file database for Rust"
version = "0.10.0"
authors = ["PJ Tatlow <pjtatlow@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pjtatlow/jammdb"
readme = "README.md"
keywords = ["db", "database", "embedded-database", "memory-map"]
categories = ["database", "database-implementations"]

exclude = [
    ".*.yml",
    ".github/*",
    "ci/*",
    "tests/*",
    "makefile",
]

[dependencies]
libc = "0.2.149"
memmap2 = "0.9.0"
page_size = "0.6.0"
fs4 = "0.7.0"
bytes = "1.5.0"
bumpalo = "3.14.0"
fnv = "1.0.7"

[dev-dependencies]
bytes = { version = "1", features = ["serde"] }
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[badges]
codecov = { repository = "pjtatlow/jammdb" }
appveyor = { repository = "pjtatlow/jammdb" }
maintenance = { status = "actively-developed" }
